force-app/main/default/objects/Weather_Widget_Configuration__c/Weather_Widget_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Weather_Widget_Configuration</label>
</CustomObject>