force-app/main/default/objects/Weather_Widget_Configuration__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <label>API_Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>