force-app/main/default/objects/Weather_Widget_Configuration__c/fields/Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Icon_Name__c</fullName>
    <label>Icon_Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>