force-app/main/default/objects/Weather_Widget_Configuration__c/fields/Weather_Description__c.field-meta.xml
<CustomField>
    <fullName>Weather_Description__c</fullName>
    <label>Weather_Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>